# rosbag-reader-driver

./: .gitmodules  CMakeLists.txt  README.md  cvproj.py  setup.sh
src/: rosbag-reader-driver.cpp  unnamed.cpp
